--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       margin: 0;
       width: 100%;
       height: 100%;
+      font-family:Arial, Helvetica, sans-serif;
+      font-size: 12pt;
     }
 
     body {
@@ -26,6 +28,7 @@
       position: absolute;
       top: 0;
       right: 0;
+      text-align: end;
     }
 
     #canvas-container {
@@ -34,8 +37,24 @@
       justify-content: center;
     }
 
+    #info {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      padding: 10px;
+    }
+
+    #license {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      text-align: right;
+      font-size: 0.6em;
+      padding: 10px;
+    }
+
     .short-input {
-      width: 60px;
+      width: 40px;
     }
 
     .controls {
@@ -48,33 +67,15 @@
   <div id="canvas-container">
     <canvas width="800" height="800" id="canvas"></canvas>
   </div>
-  <div id="controls-right" class="controls">
-    <section>
-      Rate: 
-      <input type="number" id="rate" value="0.00001" /><br />
-      <button id="start">Start Animation</button>
-      <button id="stop" disabled>Stop Animation</button>
-      <br />
-      <label>Tails:
-        <input type="checkbox" id="tails" />
-      </label>
-    </section>
-    <section>
-      Zoom:
-      <span id="multiplerOutput">1.0</span>
-      <input type="range" id="radiusMultiplier" value="1.0" min="0" max="5" step="0.01" />
-    </section>
-  </div>
   <div id="controls-left" class="controls">
     <section>
+      Turns per dot: 
+      <input type="number" id="offset" value="0.11" /><button id="draw">Draw!</button>
+      <button id="clear">Clear</button><br />
       Fraction: 
       <input type="number" id="numerator" class="short-input" />/
       <input type="number" id="denominator" class="short-input" />
-      <button id="calcFraction">Use ↓</button>
-      <br />
-      <input type="number" id="offset" value="0.11" />
-      <button id="draw">Draw!</button>
-      <button id="clear">Clear</button>
+      <button id="calcFraction">Use ꜛ</button><br />
     </section>
     <section>
       Presets: 
@@ -82,7 +83,30 @@
       <button id="pi">1/Pi</button>
       <button id="golden">Golden Ratio</button>
     </section>
+    <section>
+        Zoom:
+        <input type="range" id="radiusMultiplier" value="1.0" min="0" max="5" step="0.01" />
+        <span id="multiplerOutput">1</span>
+      </section>
   </div>
+  <div id="controls-right" class="controls">
+    <section>
+      Animation speed: 
+      <input type="number" id="rate" value="0.00001" /><br />
+      <button id="start">Start ▶️</button>
+      <button id="stop" disabled>Stop ⏸</button>
+      <br />
+      <label>Tails:
+        <input type="checkbox" id="tails" />
+      </label>
+    </section>
+  </div>
+  <section id="info">
+    See <a href="https://github.com/visum/swirling-dots">readme</a>. Inspired by <a href="https://www.youtube.com/watch?v=sj8Sg8qnjOg">this Numberphile video</a>.
+  </section>
+  <section id="license">
+      <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+  </section>
   <script src="index.js"></script>
 </body>
 
